--- a/portifolio.html
+++ b/portifolio.html
@@ -352,7 +352,7 @@
 
         </main>
         <div class="image">
-            <img  id="jhon" src="${results[0].path || 'assets/black-ngg.jpg'}" style="width: 100%;height: 100%;object-fit: cover;border-radius: 20px">
+            <img  id="jhon" src="campus2.jpg" style="width: 100%;height: 100%;object-fit: cover;border-radius: 20px">
         </div>
 
         <div class="border">
@@ -543,4 +543,5 @@
 
     </script>
 </body>
+
 </html>
