--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                     <li>
                         <div class="user">
                             <div class="profile">
-                                <img src="${results[0].profile || 'assets/user.png'}" id="image" style="width: 100%;height: 100%;object-fit: cover">
+                                <img src="car3.jpeg" id="image" style="width: 100%;height: 100%;object-fit: cover">
                             </div>
                             <div class="button">
                                 <button style="width: 100%;background-color: red;height: 100%;border: none;border-radius: 20px;color: white;display: inline-block">upload</button>
@@ -352,7 +352,7 @@
 
         </main>
         <div class="image">
-            <img  id="jhon" src="${results[0].path || 'assets/black-ngg.jpg'}" style="width: 100%;height: 100%;object-fit: cover;border-radius: 20px">
+            <img  id="campus2.jpg" style="width: 100%;height: 100%;object-fit: cover;border-radius: 20px">
         </div>
 
         <div class="border">
@@ -544,3 +544,4 @@
     </script>
 </body>
 </html>
+
