--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         <main class="main-content">
             <h1>Hello my name is <span style="color: #ff3a3a;font-family: 'Dancing Script', cursive;">${name}</span></h1>
             <h1 style="font-size: 35px;">I'm <span style="color: #ff3a3a;">${results[0].age}</span></h1>
-            <textarea disabled placeholder="Your description">${results[0].bio || ''}</textarea>
+            <textarea disabled placeholder="Your description"></textarea>
 
         </main>
         <div class="image">
@@ -544,4 +544,5 @@
     </script>
 </body>
 </html>
+
 
