--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
         </main>
         <div class="image">
-            <img  id="campus2.jpg" style="width: 100%;height: 100%;object-fit: cover;border-radius: 20px">
+            <img  id="jhon" src="campus2.jpg" style="width: 100%;height: 100%;object-fit: cover;border-radius: 20px">
         </div>
 
         <div class="border">
@@ -544,5 +544,6 @@
     </script>
 </body>
 </html>
+
 
 
