--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
 
         <!-- Main Content -->
         <main class="main-content">
-            <h1>Hello my name is <span style="color: #ff3a3a;font-family: 'Dancing Script', cursive;">${name}</span></h1>
-            <h1 style="font-size: 35px;">I'm <span style="color: #ff3a3a;">${results[0].age}</span></h1>
+            <h1>Hello my name is <span style="color: #ff3a3a;font-family: 'Dancing Script', cursive;">Richard</span></h1>
+            <h1 style="font-size: 35px;">I'm <span style="color: #ff3a3a;">15</span></h1>
             <textarea disabled placeholder="Your description"></textarea>
 
         </main>
@@ -544,6 +544,7 @@
     </script>
 </body>
 </html>
+
 
 
 
